# memories-frontend

./: .dockerignore  .eslintrc.json  .gitignore  Dockerfile.dev  Dockerfile.prod  Dockerfile.tauri  README.md  dot-env.example  dot_env.example  hierarchy.html  index.html  modules.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.doc.json  tsconfig.json  typedoc.json
.devcontainer/: devcontainer.json
.storybook/: main.ts  preview.tsx
app/: layout.tsx  page.tsx  provider.tsx
assets/: highlight.css  icons.tsx  navigation.js  search.js
classes/: components_common_ErrorBoundary.default.html  libs_adapters_ResourceAdapter.ResourceAdapter.html  libs_adapters_resourceAdapter.ResourceAdapter.html  libs_api_resource_fetcher.ResourceFetcher.html  libs_api_resource_fetcher.ResourceFetcherError.html
components/: AuthWrapper.tsx  BulkActionBar.tsx  BulkDeleteAlert.tsx  EditThumbnail.tsx
config/: settings.ts  time.ts
contexts/: FetcherParamsContext.tsx  GlobalSettingsContext.tsx  MusicPlayerContext.ts  ResourceContext.tsx  globalSettingsTypes.ts  globalSettingsUtils.ts
enums/: libs_api_resource_api.RESPONSE_TYPE.html
functions/: app__resourceType___resourceId___contentId__page.default.html  app__resourceType___resourceId__edit_page.default.html  app__resourceType___resourceId__page.default.html  app__resourceType__add_page.default.html  app__resourceType__bulk-add_page.default.html  app__resourceType__map__country___state__page.default.html  app_api_v1_books_route.GET.html  (+152 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: resource_store.rs
(+390 files in other folders)
