[package]
name = "memories"
version = "0.1.0"
description = "Memories: A resource visualization platform built with Tauri"
authors = ["Tsutomu Funada <forestlaw.me+github@gmail.com>"]
license = "MIT"
repository = "https://github.com/forestlaw77/memories"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.2", features = [] }
tauri-plugin-log = "2"
